--- a/projectStyle.css
+++ b/projectStyle.css
@@ -16,7 +16,7 @@ h2{
 
 h3{
     font-weight:normal;
-    color:#c88f99;
+    color:#912338;
 }
 
 p{
@@ -137,4 +137,8 @@ p{
     color:white;
     font-weight:bold;
     background-color:red;
+}
+
+.centerText{
+    text-align:center;
 }
